# catsmoothing

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  asv.conf.json  conftest.py  environment.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codspeed.yml  release.yml  test.yml
asv_benchmarks/: asv.conf.json
asv_benchmarks/benchmarks/: benchmarks.py
benchmarks/: benchmarks.py
catsmoothing/: __init__.py  _catsmoothing.pyi  api.py
catsmoothing/tests/: test_catsmoothing.py
docs/: docs_hooks.py  reference.md  requirements.txt
docs/examples/: index.md  splines.ipynb
docs/stylesheets/: extra.css
src/: error.rs  lib.rs  linestring.rs  python.rs  spline.rs  splines.rs  utils.rs
src/catsmoothing/: __init__.py  catsmoothing.py
tests/: spline_tests.rs  test_catsmoothing.py  tests_catsmoothing.py
