[package]
name = "catsmoothing-python"
version = "0.2.3"
authors = ["Taher Chegini <cheginit@gmail.com>"]
homepage = "https://github.com/cheginit/catsmoothing"
license = "MIT"
description = "Smoothing Shapely geometries using Catmull-Rom spline"
readme = "README.md"
edition = "2021"
include = ["/src", "/catsmoothing", "/LICENSE", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[lib]
name = "catsmoothing"
crate-type = ["cdylib", "rlib"]
doc = false

[dependencies]
thiserror = "*"
ndarray = { version = "*", features = ["rayon"] }

[dependencies.numpy]
version = "*"
optional = true

[dependencies.blas-src]
version = "*"
optional = true
features = ["accelerate"]

[dependencies.accelerate-src]
version = "*"
optional = true

[dependencies.openblas-src]
version = "*"
optional = true
features = ["cblas", "system"]

[dev-dependencies]
approx = "*"
rand = { version = "*", features = ["std"] }
rand_distr = "*"

[dependencies.pyo3]
version = "*"
features = ["extension-module", "multiple-pymethods"]
optional = true

[features]
default = []
python = ["pyo3", "numpy", "blas-src", "accelerate-src"]
