[package]
name = "catsmoothing-python"
version = "0.3.1"
authors = ["Taher Chegini <cheginit@gmail.com>"]
homepage = "https://github.com/cheginit/catsmoothing"
license = "MIT"
description = "Smoothing Shapely geometries using Catmull-Rom spline"
readme = "README.md"
edition = "2021"
include = ["/src", "/catsmoothing", "/LICENSE", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[lib]
name = "catsmoothing"
crate-type = ["cdylib", "rlib"]
doc = false

[dependencies]
thiserror = "*"
num_cpus = "*"
rayon = "*"
lazy_static = "*"
ndarray = { version = "*", features = ["rayon"] }

[dependencies.numpy]
version = "*"
optional = true

[dev-dependencies]
approx = "*"
rand = { version = "*", features = ["std"] }
rand_distr = "*"

[dependencies.pyo3]
version = "*"
features = ["extension-module", "multiple-pymethods"]
optional = true

[features]
default = []
python = ["pyo3", "numpy"]
