[package]
name = "catsmoothing-python"
version = "0.4.0"
authors = ["Taher Chegini <cheginit@gmail.com>"]
homepage = "https://github.com/cheginit/catsmoothing"
license = "MIT"
description = "Smoothing Shapely geometries using Catmull-Rom spline"
readme = "README.md"
edition = "2021"
include = ["/src", "/catsmoothing", "/LICENSE", "/AUTHORS.md", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[lib]
name = "catsmoothing"
crate-type = ["cdylib", "rlib"]
doc = false

[dependencies]
thiserror = "2"
rayon = "1"
ndarray = { version = "0.17", features = ["rayon"] }

[dependencies.numpy]
version = "0.28"
optional = true

[dev-dependencies]
approx = "0.5"
rand = { version = "0.10", features = ["std"] }
rand_distr = "0.6"

[dependencies.pyo3]
version = "0.28"
features = ["extension-module", "multiple-pymethods"]
optional = true

[features]
default = []
python = ["pyo3", "numpy"]
