[build-system]
build-backend = "maturin"
requires = [ "maturin>=1.4,<2" ]

[project]
name = "catsmoothing"
version = "0.4.1"
description = "Smoothing Shapely geometries using Catmull-Rom spline"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Taher Chegini", email = "cheginit@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]
dependencies = [ "numpy>=2", "shapely>=2" ]
optional-dependencies.benchmark = [
  "pytest-codspeed",
]
optional-dependencies.dev = [
  "ipykernel",
  "ipywidgets",
  "matplotlib",
  "pytest",
]
optional-dependencies.docs = [
  "black",
  "mkdocs",
  "mkdocs-jupyter",
  "mkdocs-materialx",
  "mkdocstrings-python",
]
optional-dependencies.lint = [
  "codespell",
  "pre-commit",
]
optional-dependencies.test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-sugar",
]
optional-dependencies.typecheck = [
  "pyright",
]
urls.Changelog = "https://github.com/cheginit/catsmoothing/blob/main/CHANGELOG.md"
urls.CI = "https://github.com/cheginit/catsmoothing/actions"
urls.Homepage = "https://github.com/cheginit/catsmoothing"
urls.Issues = "https://github.com/cheginit/catsmoothing/issues"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an
# extension module (skips linking against libpython.so)
features = [ "pyo3/extension-module", "python" ]
module-name = "catsmoothing._catsmoothing"
# Bindings type
bindings = "pyo3"
# Strip the library for minimum file size
strip = true
# Build artifacts with the specified Cargo profile
profile = "release"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [ "__pycache__", "benchmarks" ]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # compatibility with numpy 2.0
  "NPY201",
  # Perflint
  "PERF",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TC",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]
lint.ignore = [
  # add strict to zip
  "B905",
  "D103",
  "D105",
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  "PLR0913",
  "PLR2004",
  # url schema
  "S310",
  "S603",
  # shell command
  "S605",
  "S607",
  # custom exception
  "TRY003",
]
lint.per-file-ignores."catsmoothing/catsmoothing.py" = [
  # specific type error ignored
  "PGH003",
]
lint.per-file-ignores."catsmoothing/tests/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # specific type error ignored
  "PGH003",
  # use of "assert"
  "S101",
]
lint.extend-safe-fixes = [
  # module level imports
  "E402",
  # break down assert
  "PT018",
  # Move imports
  "TC",
  # absolute imports
  "TID252",
]
lint.isort.known-first-party = [ "catsmoothing" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,cache,pixi.lock,**.ipynb,./target,./site/"
ignore-words-list = "crate,gages"

[tool.pyproject-fmt]
expand_tables = [ "tool.pixi" ]

[tool.pytest]
ini_options.addopts = [
  "--import-mode=importlib",
  "-v",
]
ini_options.doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
ini_options.testpaths = [ "catsmoothing/tests" ]
ini_options.markers = [
  "benchmark: Tests that are benchmarks",
]

[tool.coverage]
run.branch = true
run.omit = [ "**/__init__.py", "**/tests/*.py" ]
run.source = [ "catsmoothing" ]
paths.omit = [ "**/__init__.py", "**/tests/*.py" ]
paths.source = [ "catsmoothing", "*/site-packages" ]
report.exclude_lines = [ "if TYPE_CHECKING:" ]
report.ignore_errors = true
report.omit = [ "**/__init__.py" ]

[tool.pyright]
exclude = [ "**/__pycache__", "**/__init__.py", "catsmoothing/tests", "docs/" ]
include = [ "catsmoothing" ]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportAttributeAccessIssue = false
typeCheckingMode = "strict"

[tool.pixi.environments]
dev = { features = [ "dev", "py314" ] }
test310 = { features = [ "test", "py310" ] }
test314 = { features = [ "test", "py314" ] }
benchmark = { features = [ "benchmark", "py314" ] }
typecheck = { features = [ "typecheck", "py314" ] }
lint = { features = [ "lint", "py314" ], no-default-feature = true }
docs = { features = [ "docs", "py314" ] }

[tool.pixi.feature.benchmark.tasks]
benchmark = { cmd = [ "pytest", "catsmoothing/tests", "--codspeed" ], depends-on = [ "preinstall" ] }

[tool.pixi.feature.docs.tasks]
build-docs = "mkdocs build --strict"
docs = { cmd = [ "mkdocs", "serve" ], depends-on = [ "preinstall", "build-docs" ] }

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"
maturin = "*"
uv = "*"
pip = "*"
tomli = "*"

[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
maturin = "*"
uv = "*"
pip = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = [
  "pytest",
  "--cov",
  "--cov-append",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--durations=5",
], depends-on = [ "preinstall" ] }
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.typecheck.tasks]
typecheck = { cmd = [ "pyright" ], depends-on = [ "preinstall" ] }

[tool.pixi.pypi-dependencies]
catsmoothing = { path = ".", editable = true }

[tool.pixi.tasks]
preinstall = "maturin develop --uv"

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]
